--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "version": "1.0.1",
     "main": "index.js",
     "repository": "git@github.com:PaulinaSzeszel/NodeJS--MyPackage.git",
-    "author": "Marcin Nowak <paulina_szeszel@o2.pl>",
+    "author": "Paulina Szeszel <paulina_szeszel@o2.pl>",
     "license": "MIT"
   }
